Fix articles padding on mobile.

--- a/frontends/Scss/somanyfeeds.scss
+++ b/frontends/Scss/somanyfeeds.scss
@@ -292,7 +292,7 @@ article {
 }
 
 article.read {
-  padding: .5rem 1rem;
+  padding: .5rem 1.5rem;
 
   @media (min-width: $small-screen-width) {
     padding: 1rem 2rem;
